@@ -111,17 +111,21 @@ $ ccmake ../visp
 The following image shows that this command allows to configure (just by pressing [c] key) the build in a more advanced way where some options could be easily turned On/Off. It allows also to see which are the 3rd parties that will be used. To generate the makefiles, just press [g] key in the ccmake gui.
 \image html img-ccmake-centos-all.png Snapshot of the ccmake \c ../visp command used to configure ViSP.
 
-\subsection install_centos_build Building ViSP from source
+\subsection install_centos_build Building ViSP libraries
 
 - To build ViSP proceed with:
 \code
-$ make -j
+$ make -j4
 \endcode
 
 - To install ViSP proceed with:
 \code
 $ sudo make install
 \endcode
+\note This stage is optional, since ViSP could be used as a 3rd party without installation. 
+\note The default install location is set to \c /usr/local. This location could be changed modifying \c CMAKE_INSTALL_PREFIX var. 
+
+\subsection install_centos_doc Building ViSP documentation
 
 - To build ViSP documentation, you have first to install Doxygen package:
 \code
@@ -129,7 +133,14 @@ $ sudo yum install doxygen graphviz
 \endcode
 Then you can proceed with:
 \code
-$ make -j visp_doc
+$ make -j4 visp_doc
+\endcode
+The generated documentation is then available in \c \<binary_dir\>/doc/html/index\.html
+
+- It is also possible to generate a more complete documentation that includes also all the internal classes. This could be achieved setting CMake var \c ENABLE\_FULL\_DOC=ON like:
+\code
+$ cmake ../visp -DENABLE_FULL_DOC=ON
+$ make -j4 visp_doc
 \endcode
 
 \section install_centos_dataset Install ViSP dataset
@@ -183,18 +194,18 @@ $ sudo make uninstall
 
 If you want to build only ViSP modules libraries, nor the examples, tutorials and tests:
 \code
-$ make -j visp_modules
+$ make -j4 visp_modules
 \endcode
 
 \subsection install_centos_tips_module_once How to build a ViSP specific module
 
 If you want to build a given module and all the dependencies:
 \code
-$ make -j visp_<module_name>
+$ make -j4 visp_<module_name>
 \endcode
 For example to build the model-based tracker module named mbt, run:
 \code
-$ make -j visp_mbt
+$ make -j4 visp_mbt
 \endcode
 
 \subsection install_centos_tips_target Which are the targets that could be run with make ?
