@@ -135,17 +135,21 @@ The previous command allows to configure (just by pressing [c] key) the build in
 Then to generate the makefiles, just press [g] key in the ccmake gui.
 Now we can build ViSP.
 
-\subsection install_osx_brew_build Building ViSP from source
+\subsection install_osx_brew_build Building ViSP libraries
 
 - To build ViSP proceed with:
 \code
-$ make -j
+$ make -j4
 \endcode
 
 - To install ViSP proceed with:
 \code
 $ sudo make install
 \endcode
+\note This stage is optional, since ViSP could be used as a 3rd party without installation. 
+\note The default install location is set to \c /usr/local. This location could be changed modifying \c CMAKE_INSTALL_PREFIX var. 
+
+\subsection install_osx_brew_doc Building ViSP documentation
 
 - To build ViSP documentation, you have first to install Doxygen package:
 \code
@@ -153,8 +157,17 @@ $ brew install doxygen
 \endcode
 Then you can proceed with:
 \code
-$ make -j visp_doc
+$ make -j4 visp_doc
 \endcode
+The generated documentation is then available in \c \<binary_dir\>/doc/html/index\.html
+
+- It is also possible to generate a more complete documentation that includes also all the internal classes. This could be achieved setting CMake var \c ENABLE\_FULL\_DOC=ON like:
+\code
+$ cmake ../visp -DENABLE_FULL_DOC=ON
+$ make -j4 visp_doc
+\endcode
+
+
 \section install_brew_dataset Install ViSP dataset
 Some ViSP examples and tests require data (images, video, models) that are not part of ViSP source code but available in a separate archive named \c ViSP-images-x.y.z.zip. This archive could be downloaded from http://visp.inria.fr/download page. We provide here after the way to install these data if you want to run ViSP examples.
 
@@ -206,18 +219,18 @@ $ sudo make uninstall
 
 If you want to build only ViSP modules libraries, nor the examples, tutorials and tests:
 \code
-$ make -j visp_modules
+$ make -j4 visp_modules
 \endcode
 
 \subsection install_brew_tips_module_once How to build a ViSP specific module
 
 If you want to build a given module and all the dependencies:
 \code
-$ make -j visp_<module_name>
+$ make -j4 visp_<module_name>
 \endcode
 For example to build the model-based tracker module named mbt, run:
 \code
-$ make -j visp_mbt
+$ make -j4 visp_mbt
 \endcode
 
 \subsection install_brew_tips_target Which are the targets that could be run with make ?
@@ -350,12 +363,12 @@ It means that apparently there is a conflict between libpng version installed by
 A work arround is to turn off libpng usage in ViSP. To configure and build again ViSP without png support:
 \code
 $ ccmake -DUSE_PNG=OFF ../ViSP
-$ make -j
+$ make -j4
 \endcode
 An other work arround option is to turn off X11 usage in ViSP. Display capabilities will be then the one from OpenCV. To this end, configure and build again ViSP without X11 support:
 \code
 $ ccmake -DUSE_X11=OFF ../ViSP
-$ make -j
+$ make -j4
 \endcode
 
 \section install_osx_brew_next Next tutorial
